--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistNavigationAnimationVersion = "<latest-version>"
 agp = "8.10.0"
 coilCompose = "3.2.0"
 coilComposeVersion = "2.5.0"
